--- a/auth-service-dev.yml
+++ b/auth-service-dev.yml
@@ -44,3 +44,9 @@ management:
   endpoint:
     health:
       show-details: always
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: ${EUREKA_URI:http://localhost:8761/eureka}
+  instance:
+    preferIpAddress: true
