Updated Notification Service Configurations

--- a/notification-service-dev.yml
+++ b/notification-service-dev.yml
@@ -31,3 +31,10 @@ spring:
     mode: HTML
 server:
   port: 8091
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: ${EUREKA_URI:http://localhost:8761/eureka}
+  instance:
+    preferIpAddress: true
