--- a/api-gateway-dev.yml
+++ b/api-gateway-dev.yml
@@ -5,11 +5,11 @@ spring:
     gateway:
       routes:
         - id: book-app
-          uri: lb://book-app
+          uri: lb://BOOKAPP
           predicates:
             - Path=/api/v1/book/**
         - id: search-app
-          uri: lb://search-app
+          uri: lb://SEARCHAPP
           predicates:
             - Path=/api/query/**
 server:
