--- a/book-app-dev.yml
+++ b/book-app-dev.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: BookApp
+    name: book-app
   datasource:
     url: jdbc:mysql://localhost:3306/books_dev?useSSL=false
     username: root
@@ -53,5 +53,3 @@ management:
   endpoint:
     health:
       show-details: always
-
-
