--- a/book-app-dev.yml
+++ b/book-app-dev.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: book-app
+    name: BOOK-APP
   datasource:
     url: jdbc:mysql://localhost:3306/books_dev?useSSL=false
     username: root
