--- a/api-gateway-dev.yml
+++ b/api-gateway-dev.yml
@@ -25,3 +25,7 @@ eureka:
       defaultZone: ${EUREKA_URI:http://localhost:8761/eureka}
   instance:
     preferIpAddress: true
+
+logging:
+  level:
+    org.springframework.cloud.gateway: DEBUG
