--- a/api-gateway-dev.yml
+++ b/api-gateway-dev.yml
@@ -3,15 +3,20 @@ spring:
     name: api-gateway
   cloud:
     gateway:
+      discovery:
+        locator:
+          enabled: true
+          lower-case-service-id: true
       routes:
-        - id: BOOK-APP
-          uri: lb://BOOK-APP
+        - id: book-app
+          uri: lb://book-app
           predicates:
             - Path=/api/v1/book/**
         - id: search-app
-          uri: lb://SEARCH-APP
+          uri: lb://search-app
           predicates:
             - Path=/api/query/**
+
 server:
   port: 8050
   error:
