--- a/api-gateway-dev.yml
+++ b/api-gateway-dev.yml
@@ -9,11 +9,11 @@ spring:
           lower-case-service-id: true
       routes:
         - id: book-app
-          uri: lb://book-app
+          uri: lb://BOOK-APP
           predicates:
             - Path=/api/v1/book/**
         - id: search-app
-          uri: lb://search-app
+          uri: lb://SEARCH-APP
           predicates:
             - Path=/api/query/**
 
