--- a/api-gateway-dev.yml
+++ b/api-gateway-dev.yml
@@ -16,7 +16,20 @@ spring:
           uri: lb://SEARCH-APP
           predicates:
             - Path=/api/query/**
-
+  datasource:
+    url: jdbc:mysql://localhost:3306/booksdb?useSSL=false
+    username: root
+    password: 12345678
+  jpa:
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL8Dialect
+    hibernate:
+      ddl-auto: none
+      show-sql: true
+      properties:
+        hibernate:
+          format_sql: true
 server:
   port: 8050
   error:
