--- a/api-gateway-dev.yml
+++ b/api-gateway-dev.yml
@@ -1,20 +1,6 @@
 spring:
   application:
     name: api-gateway
-  datasource:
-    url: jdbc:mysql://localhost:3306/booksdb?useSSL=false
-    username: root
-    password: 12345678
-  jpa:
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.MySQL8Dialect
-    hibernate:
-      ddl-auto: none
-      show-sql: true
-      properties:
-        hibernate:
-          format_sql: true
   cloud:
     gateway:
       discovery:
@@ -26,10 +12,14 @@ spring:
           uri: lb://BOOK-APP
           predicates:
             - Path=/api/v1/book/**
+         filters:
+           - AuthenticationFilter
         - id: search-app
           uri: lb://SEARCH-APP
           predicates:
             - Path=/api/query/**
+         filters:
+           - AuthenticationFilter
         - id: auth-service
           uri: lb://AUTH-SERVICE
           predicates:
